--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .container {
-    @apply mx-auto max-w-6xl xl:max-w-7xl px-8;
+    @apply mx-auto max-w-6xl xl:max-w-7xl sm:px-8 px-3;
   }
 }
 
